--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,32 @@
 body{
     font-family: 'Montserrat', sans-serif;
 }
+.primary{
+    color: #FF008E;
+}
+.btn-primary{
+    outline: 0;
+    border: 0;
+    padding: 15px 20px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    background-image: linear-gradient(90deg, #c21273, #FF008E);
+    cursor: pointer;
+    box-shadow: 0 7px #a5075e;
+    position: relative;
+    top: 0;
+}
+.btn-primary:active{
+    top:5px;
+    box-shadow: 0 2px #a5075e;;
+}
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
 /*************************************************************************/
         /*************** Common styles end *****************/
 /*************************************************************************/
@@ -24,11 +50,6 @@ header{
     background-image: no-repeat;
     background-size: cover;
 
-}
-.nav-container{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 30px;
 }
 nav{
     display: flex;
@@ -70,12 +91,114 @@ nav{
     justify-content: center;
     align-items: flex-start;
 }
+.banner-left h1{
+    font-size: 45px;
+    color: #fff;
+}
+.banner-left p{
+    font-size: 18px;
+    color: #fff;
+    line-height: 1.5;
+    margin:20px 0;
+}
+.banner-right{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
 .banner-right img{
     width: 100%;
 }
-
-
-
 /*************************************************************************/
         /************* Banner styles end ***********/
 /*************************************************************************/
+/*************************************************************************/
+/************* Feature styles start ***********/
+/*************************************************************************/
+.section-title{
+    text-align: center;
+}
+.section-title h2{
+    margin: 50px 0;
+    border-bottom: 2px solid #FF008E;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 50px;
+}
+.feature{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+}
+.card{
+    width: 400px;
+    padding: 30px;
+    margin: 0 auto;
+    box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.2);
+}
+.card .card-icon{
+    background-color: #FF008E;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    padding: 7.5px;
+    color: white;
+}
+.card h2{
+    color:#FF008E;
+    font-size: 22px;
+}
+.card p{
+    margin: 10px 0;
+    line-height: 1.5;
+}
+.card a{
+    color: #FF008E;
+    text-decoration: none;
+}
+/************* Feature styles end ***********/
+/*************************************************************************/
+
+/************* About styles start ***********/
+/*************************************************************************/
+#about{
+    /* height:100vh; */
+    background-image: url(../images/cloud.png), linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4));
+    background-blend-mode: overlay;
+    background-image: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+}
+.about {
+    height: calc(100vh - 80px);
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.about-left {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.about-left img {
+    width: 100%;
+}
+.about-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.about-right h1{
+    font-size: 40px;
+    color: #fff;
+}
+.about-right p{
+    font-size: 18px;
+    color: #fff;
+    line-height: 1.5;
+    margin: 20px 0;
+}
+
