--- a/style/style.css
+++ b/style/style.css
@@ -81,7 +81,7 @@ nav{
     height: calc(100vh - 80px);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    max-width: 1200px;
+    min-width: 500px;
     margin: 0 auto;
     /* grid-template-columns: repeat(2,1fr); */
 }
@@ -201,4 +201,126 @@ nav{
     line-height: 1.5;
     margin: 20px 0;
 }
+/************* About styles start ***********/
+/*************************************************************************/
+/************* Gallery styles start ***********/
+/*************************************************************************/
+.gallery-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+.gallery-container img{
+    width: 100%;
+    height: 200px;
+    border: 1px solid rgb(248, 107, 107);
+    border-radius: 5px;
+    object-fit: cover;
+}
+/************* Gallery styles end ***********/
+/*************************************************************************/
+/************* Contact styles start ***********/
+/*************************************************************************/
 
+.contact {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+}
+.left-contact img{
+    width: 100%;
+}
+
+.right-contact form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.text-field{
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px 0;
+    font-size: 18px;
+    font-family: inherit;
+    outline: none;
+    border: 1px solid rgb(77, 65, 65);
+}
+/************* Contact styles end ***********/
+/*************************************************************************/
+
+footer{
+    margin-top: 50px;
+    height: 50px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+/* Navbar */
+#nav-toggler{
+    display: none;
+}
+.nav-toggler-icon{
+    display: none;
+    color: white;
+    font-size: 30px;
+}
+/* Responsive css */
+@media screen and (max-width:950px){ 
+    .gallery{
+        grid-template-columns: 1fr 1fr;
+    }
+    .banner-left h1{
+        font-size: 35px;
+    }
+    #about2{
+        display: none;
+    }
+}
+
+
+@media screen and (max-width:800px) {
+    .banner{
+        grid-template-columns: 1fr;
+        height: fit-content;
+    }
+    .feature,
+    .gallery-container,
+    .contact{
+        grid-template-columns: 1fr;
+    }
+    .gallery-container{
+        justify-items: center;
+    }
+    .gallery-container img{
+        
+        max-width: 350px;
+    }
+    .banner-left{
+        order: 2;
+        padding: 50px 0;
+    }
+    #about {
+        display: none;
+        }
+    .nav-toggler-icon {
+        display: block;
+        }
+    .navigation{
+        position: fixed;
+        top: 80px;
+        left: 0;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        padding: 20px 0;
+        transform: translateY(-330px);
+        transition: 0.5s ease-in-out;
+    }
+    .navigation li a{
+        color: black;
+    }
+    #nav-toggler:checked ~ .navigation{
+        transform: translateY(0px);
+    }
+}
